--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-	<link href='https://fonts.googleapis.com/css?family=Amatic+SC:700' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Karla:700' rel='stylesheet' type='text/css'>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
 
 	<title>Canvas</title>
@@ -13,7 +11,7 @@
 
 <div class="header">1984 - 2013</div>
 
-<div id="year"> in <span id="year_"> Year </span> </div>
+<div id="year"> in <span id="year_"> year </span> </div>
 <div id="percentage"> <span id="percent">%</span> of Californians smoked at least 100 cigarettes <br> in their
 lifetime and were still smoking in this year</div>
 
@@ -21,7 +19,7 @@ lifetime and were still smoking in this year</div>
 <div class="row">
 
   <div class="span7 center">
-  	<canvas id="myCanvas" width="700px" height="400px"></canvas>
+  	<canvas id="myCanvas" width="800" height="400px"></canvas>
   	<div id="controls">
     	<div class="sliderValues">time: <span id="time"></span>s / progress: <span id="progress"></span></div>
     	<div class="slider" id="progressSlider"></div>
