Changed some font coloring and about to take out the play button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Karla:700' rel='stylesheet' type='text/css'>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
 
 	<title>Canvas</title>
@@ -19,7 +21,7 @@ lifetime and were still smoking in this year</div>
 <div class="row">
 
   <div class="span7 center">
-  	<canvas id="myCanvas" width="800" height="400px"></canvas>
+  	<canvas id="myCanvas" width="800px" height="400px"></canvas>
   	<div id="controls">
     	<div class="sliderValues">time: <span id="time"></span>s / progress: <span id="progress"></span></div>
     	<div class="slider" id="progressSlider"></div>
@@ -30,7 +32,6 @@ lifetime and were still smoking in this year</div>
     	<button class="btn my-btn" id="restartBtn">restart()</button>
   </div>
   <script src="canvas.js"></script>
-
 </div>
 </div>
   <div class="row-fluid">
