Updated timeScale to speed and updated the font to white

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 
-	<title>Canvas</title>
+	<title>1984 - 2013</title>
 </head>
 
 <div class="header">1984 - 2013</div>
@@ -31,7 +31,7 @@ lifetime and were still smoking in this year</div>
   </div>
   <div style="text-align:left; width:420px; margin:auto">
       <div class="slider" id="timeScaleSlider" style="display:inline-block"></div>
-      <div class="sliderValues" style="display:inline-block">timeScale: <span id="timeScale" >1</span></div>
+      <div class="sliderValues" style="display:inline-block">speed: <span id="timeScale" >1</span></div>
   </div>  
   <script src="canvas.js"></script>
 </div>
